src/objects/Membership_Application__c/Membership_Application__c.object-meta.xml
<CustomObject>
    <label>Membership Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>