src/objects/Membership_Application__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>