src/objects/Membership_Application__c/fields/Awards__c.field-meta.xml
<CustomField>
    <fullName>Awards__c</fullName>
    <label>Awards and Decorations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>