src/objects/Membership_Application__c/fields/Combat_Veteran__c.field-meta.xml
<CustomField>
    <fullName>Combat_Veteran__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Combat Veteran</label>
    <type>Checkbox</type>
</CustomField>