src/objects/Membership_Application__c/fields/Deployments__c.field-meta.xml
<CustomField>
    <fullName>Deployments__c</fullName>
    <label>Deployments/Combat Zones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>