src/objects/Membership_Application__c/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <label>Emergency Contact Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>