src/objects/Membership_Application__c/fields/Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone__c</fullName>
    <label>Emergency Contact Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>