src/objects/Membership_Application__c/fields/Emergency_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship__c</fullName>
    <label>Emergency Contact Relationship</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>