src/objects/Membership_Application__c/fields/Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Membership_Level__c</fullName>
    <label>Desired Membership Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Member</fullName>
            </value>
            <value>
                <fullName>Support Member</fullName>
            </value>
            <value>
                <fullName>Auxiliary Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>