src/objects/Membership_Application__c/fields/Military_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Military_Occupation__c</fullName>
    <label>Military Occupation/MOS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>