src/objects/Membership_Application__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>