src/objects/Membership_Application__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <label>Review Date</label>
    <type>DateTime</type>
</CustomField>