src/objects/Membership_Application__c/fields/Road_Name__c.field-meta.xml
<CustomField>
    <fullName>Road_Name__c</fullName>
    <label>Desired Road Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>