src/objects/Membership_Application__c/fields/Service_Branch__c.field-meta.xml
<CustomField>
    <fullName>Service_Branch__c</fullName>
    <label>Service Branch</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>Marines</fullName>
            </value>
            <value>
                <fullName>Coast Guard</fullName>
            </value>
            <value>
                <fullName>Space Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>