src/objects/Membership_Application__c/fields/Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Status__c</fullName>
    <label>Service Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Duty</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>National Guard</fullName>
            </value>
            <value>
                <fullName>Reserves</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>