src/objects/Membership_Application__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>