src/objects/Membership_Application__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <label>Submission Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>